# stellar

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  publish-conan.yml  publish-vcpkg.yml  release.yml
benchmarks/: CMakeLists.txt  bench_collections.cpp  bench_strings.cpp
cmake/: stellar.pc.in  stellarConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp
include/ste/: async.hpp  collections.hpp  ste.hpp  string_builder.hpp  strings.hpp  version.hpp
include/ste/detail/: ascii.hpp  concepts.hpp
packaging/vcpkg/: portfile.cmake  vcpkg.json
registry/: README.md
registry/ports/stellar/: portfile.cmake  vcpkg.json
registry/versions/: baseline.json
registry/versions/s-/: stellar.json
test_package/: conanfile.py
test_package/src/: smoke.cpp
tests/: CMakeLists.txt  test_async.cpp  test_collections.cpp  test_string_builder.cpp  test_strings.cpp
